# Vanav-diel

./: .gitignore  CMakeLists.txt  README.md
src/conversion/: mesh_io.cpp  mesh_io.h  obj_preprocessing.cpp  obj_preprocessing.h  obj_to_mset.cpp  obj_to_mset_cli.cpp  obj_to_mset_cli.h
src/conversion/generation/: navmesh_generation_common.cpp  navmesh_generation_common.h  navmesh_generation_monolithic.cpp  navmesh_generation_monolithic.h  navmesh_generation_tiled.cpp  navmesh_generation_tiled.h
src/debugging/: navmesh_component_debug.cpp  navmesh_debug_cli.cpp  navmesh_debug_common.cpp  navmesh_debug_common.h  navmesh_debug_tool.cpp  navmesh_debug_tool.h
src/pathfinding/: query_cli.cpp
src/pathfinding/routing/: world_route.cpp  world_route.h  zone_route.cpp  zone_route.h
src/visualization/: main.cpp  viz.cpp  viz.h
test/: navmesh_test_utils.h  test_jeuno_reachability.cpp  test_mog_house_reachability.cpp  test_obj_to_mset_cli.cpp
